Fix modal jump on city-hubs

--- a/app/assets/stylesheets/controllers/city/index.css.scss
+++ b/app/assets/stylesheets/controllers/city/index.css.scss
@@ -1,7 +1,9 @@
 .stay-menu {
-  margin-bottom: 660px;
   position: relative;
   z-index: 10;
+}
+.stay-menu + #causes {
+  padding-top: 608px;
 }
 .stay-menu .bg-cover {
   position: fixed;
